correct the correction of ffooter alignment logo

--- a/app/assets/stylesheets/this-site.css.scss
+++ b/app/assets/stylesheets/this-site.css.scss
@@ -253,7 +253,7 @@ footer {
 	margin: 0 auto;
 	width: 100%;
 	display: relative;
-	left: 15px;
+	left: 0px;
 	img {
 		max-height: 150px;
 	}
